cache rpm downloads

--- a/.github/workflows/build-evilwoods-desktop.yml
+++ b/.github/workflows/build-evilwoods-desktop.yml
@@ -17,4 +17,7 @@ jobs:
     with:
       num-packages-to-keep: 20
       image-name: "evilwoods-desktop"
+      containerfile-name: "workflow.Containerfile"
+      rpm-cache: true
+      extra-args: "--voulme /var/cache/libdnf5/:/var/cache/libdnf5:z"
     secrets: inherit
