--- a/.github/workflows/build-evilwoods-desktop.yml
+++ b/.github/workflows/build-evilwoods-desktop.yml
@@ -19,5 +19,5 @@ jobs:
       image-name: "evilwoods-desktop"
       containerfile-name: "workflow.Containerfile"
       cache-rpms: true
-      extra-args: "--volume /var/cache/libdnf5/:/var/cache/libdnf5:z"
+      extra-args: "--volume /tmp/libdnf5/:/var/cache/libdnf5:z"
     secrets: inherit
