user default branch var instead of a specific name

--- a/.github/workflows/build-evilwoods-desktop.yml
+++ b/.github/workflows/build-evilwoods-desktop.yml
@@ -3,7 +3,7 @@ on:
   schedule:
     - cron: "41 4 * * *"
   push:
-    branches: ["main"]
+    branches: [$default-branch]
     paths:
       - "bootc/evilwoods-desktop/**"
   workflow_dispatch:
