--- a/.github/workflows/build-evilwoods-binary-cache.yml
+++ b/.github/workflows/build-evilwoods-binary-cache.yml
@@ -1,7 +1,7 @@
 name: build-evilwoods-binary-cache
 on:
   push:
-    branches: ["main"]
+    branches: [$default-branch]
     paths:
       - "bootc/evilwoods-binary-cache/**"
   workflow_dispatch:
