--- a/.github/workflows/build-evilwoods-binary-cache.yml
+++ b/.github/workflows/build-evilwoods-binary-cache.yml
@@ -27,3 +27,5 @@ jobs:
           container-repository: ${{ env.REGISTRY }}
           image-name: ${{ env.IMAGE_NAME }}
           containerfile: ${{ env.CONTAINERFILE }}
+          cosign-private-key: ${{ secrets.COSIGN_PRIVATE_KEY }}
+          cosign-password: ${{ secrets.COSIGN_PASSWORD }}
