--- a/.github/workflows/build-evilwoods-desktop.yml
+++ b/.github/workflows/build-evilwoods-desktop.yml
@@ -7,6 +7,11 @@ on:
     paths:
       - "bootc/evilwoods-desktop/**"
   workflow_dispatch:
+    inputs:
+      skip-cache:
+        description: "No cache"
+        type: boolean
+        default: false
 
 env:
   REGISTRY: ghcr.io/${{ github.repository_owner }}
@@ -29,7 +34,9 @@ jobs:
           container-repository: ${{ env.REGISTRY }}
           image-name: ${{ env.IMAGE_NAME }}
           containerfile: ${{ env.CONTAINERFILE }}
-          cache-build: "true"
+          skip-cache: ${{ github.event.inputs.no-cache }}
+          setup-layer-caching: "true"
+          setup-rpm-caching: "true"
           cosign-private-key: ${{ secrets.COSIGN_PRIVATE_KEY }}
           cosign-password: ${{ secrets.COSIGN_PASSWORD }}
           num-packages-to-keep: 20
