--- a/.github/actions/build-container-image/action.yml
+++ b/.github/actions/build-container-image/action.yml
@@ -80,11 +80,12 @@ runs:
           EXTRA_ARGS+=" --volume /tmp/libdnf5:/var/cache/libdnf5:z"
         fi
         echo "extra-args=$EXTRA_ARGS" >> $GITHUB_OUTPUT
-      env: IMAGE=${{ inputs.container-repository }}/${{ inputs.image-name }}
-        EVENT_NAME=${{ github.event_name }}
-        SKIP_CACHE=${{ inputs.skip-cache }}
-        RPM_CACHE=${{ inputs.setup-rpm-caching }}
-        LAYER_CACHE=${{ inputs.setup-layer-caching }}
+      env:
+        IMAGE: ${{ inputs.container-repository }}/${{ inputs.image-name }}
+        EVENT_NAME: ${{ github.event_name }}
+        SKIP_CACHE: ${{ inputs.skip-cache }}
+        RPM_CACHE: ${{ inputs.setup-rpm-caching }}
+        LAYER_CACHE: ${{ inputs.setup-layer-caching }}
 
     - name: Build container image
       id: build-image
