--- a/.github/actions/build-container-image/action.yml
+++ b/.github/actions/build-container-image/action.yml
@@ -70,20 +70,28 @@ runs:
       shell: bash
       run: |
         EXTRA_ARGS=""
+
         if [[ $LAYER_CACHE == "true" ]]; then
-          EXTRA_ARGS="--cache-from $IMAGE --cache-to $IMAGE"
+          EXTRA_ARGS+=" --cache-to $IMAGE"
+          if [[
+              $EVENT_NAME == "schedule" ||
+              ($EVENT_NAME== "workflow_dispatch" && $SKIP_CACHE == "true") \
+            ]]; then
+            EXTRA_ARGS+=" --no-cache"
+          else
+            EXTRA_ARGS+=" --cache-from $IMAGE"
+          fi
         fi
-        if [[ $EVENT_NAME == "schedule" || $SKIP_CACHE == "true" ]]; then
-          EXTRA_ARGS=" --no-cache --cache-to $IMAGE"
-        fi
+
         if [[ $RPM_CACHE == "true" ]]; then
           EXTRA_ARGS+=" --volume /tmp/libdnf5:/var/cache/libdnf5:z"
         fi
+
         echo "extra-args=$EXTRA_ARGS" >> $GITHUB_OUTPUT
       env:
         IMAGE: ${{ inputs.container-repository }}/evilwoods-cache
         EVENT_NAME: ${{ github.event_name }}
-        SKIP_CACHE: ${{ inputs.skip-cache }}
+        SKIP_CACHE: ${{ github.event.inputs.skip-cache }}
         RPM_CACHE: ${{ inputs.setup-rpm-caching }}
         LAYER_CACHE: ${{ inputs.setup-layer-caching }}
 
