--- a/.github/workflows/build-evilwoods-binary-cache.yml
+++ b/.github/workflows/build-evilwoods-binary-cache.yml
@@ -18,6 +18,9 @@ jobs:
       packages: write
       contents: read
     steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
       - name: setup
         uses: ./.github/actions/build-container-image
         with:
