--- a/.github/workflows/build-evilwoods-binary-cache.yml
+++ b/.github/workflows/build-evilwoods-binary-cache.yml
@@ -9,7 +9,7 @@ on:
 env:
   REGISTRY: ghcr.io/${{ github.repository_owner }}
   IMAGE_NAME: evilwoods-binary-cache
-  CONTAINERFILE: workflow.Containerfile
+  CONTAINERFILE: Containerfile
 
 jobs:
   podman-build:
