--- a/.github/workflows/build-evilwoods-binary-cache.yml
+++ b/.github/workflows/build-evilwoods-binary-cache.yml
@@ -1,7 +1,8 @@
 name: build-evilwoods-binary-cache
 on:
   push:
-    branches: [$default-branch]
+    branches:
+      - main
     paths:
       - "bootc/evilwoods-binary-cache/**"
   workflow_dispatch:
