--- a/.github/workflows/build-evilwoods-desktop.yml
+++ b/.github/workflows/build-evilwoods-desktop.yml
@@ -3,7 +3,8 @@ on:
   schedule:
     - cron: "41 4 * * *"
   push:
-    branches: [$default-branch]
+    branches:
+      - main
     paths:
       - "bootc/evilwoods-desktop/**"
   workflow_dispatch:
