--- a/.github/workflows/build-evilwoods-server.yml
+++ b/.github/workflows/build-evilwoods-server.yml
@@ -3,7 +3,8 @@ on:
   schedule:
     - cron: "21 4 * * 5"
   push:
-    branches: [$default-branch]
+    branches:
+      - main
     paths:
       - "bootc/evilwoods-server/**"
   workflow_dispatch:
