add obsidian-sync role

--- a/ansible/setup-evilcloud-playbook.yml
+++ b/ansible/setup-evilcloud-playbook.yml
@@ -63,3 +63,9 @@
       tags:
         - miniflux
         - roles
+    - role: obsidian-sync
+      become_user: "{{ evilwoods_runner_user }}"
+      become: true
+      tags:
+        - obsidian-sync
+        - roles
