--- a/bootc/evilwoods-desktop/Containerfile
+++ b/bootc/evilwoods-desktop/Containerfile
@@ -1,4 +1,4 @@
-ARG FEDORA_VERSION=42
+ARG FEDORA_VERSION=43
 FROM ghcr.io/sttagent/evilwoods-binary-cache:latest AS binary-cache
 
 FROM quay.io/fedora-ostree-desktops/silverblue:${FEDORA_VERSION}
@@ -13,8 +13,6 @@ function evildnf {
   dnf -y --setopt=keepcache=true "$@"
 }
 evildnf config-manager addrepo --from-repofile=https://pkgs.tailscale.com/stable/fedora/tailscale.repo
-curl -fsSL "https://copr.fedorainfracloud.org/coprs/scottames/ghostty/repo/fedora-$(rpm -E %fedora)/scottames-ghostty-fedora-$(rpm -E %fedora).repo" |
-  sudo tee /etc/yum.repos.d/_copr:copr.fedorainfracloud.org:scottames:ghostty.repo >/dev/null
 
 evildnf install \
   "https://download1.rpmfusion.org/free/fedora/rpmfusion-free-release-$(rpm -E %fedora).noarch.rpm" \
@@ -31,8 +29,7 @@ evildnf install \
   just \
   fzf \
   gnome-shell-extension-appindicator \
-  zoxide \
-  ghostty
+  zoxide
 EOF
 
 COPY context/config/usr /usr
